# FastAPI_example

./: .env.sample  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: b121b023f6a8_adding_tables_author_book_and_.py
app/: config.py  crud.py  database.py  dependencies.py  main.py
app/crud/: __init__.py  author.py  base.py  book.py
app/database/: __init__.py  session.py
app/models/: author.py  book.py
app/routers/: authors.py  books.py
app/schemas/: __init__.py  author.py  book.py
app/tests/: conftest.py
app/tests/api/: test_author.py  test_book.py
app/tests/crud/: test_author.py  test_book.py
app/tests/utils/: author.py  book.py  utils.py
tests/: test_app.py
