[tool.poetry]
name = "ex_books_fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.68.0"}
SQLAlchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
alembic = "^1.6.5"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
